--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "file-loader": "^5.0.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   }
 }
