--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "file-loader": "^5.0.2",
+    "html-webpack-plugin": "^3.2.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
